# KamiSimulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: cantil.md  consec.md  features.md  json.md  quickSolver.md  solverInterfaces.md  toc.md  todo.md
modules/: FindEigen3.cmake
resources/: README.md
scripts/: README.md
scripts/blender/: KamiLoader.py  KamiLoaderModules.py  USCLoader.py
scripts/blender/assets/: README.md  hairAssets.blend
scripts/json/: AMSSetting.json  CantilSetting.json  ConsecStCoss.json  KamiSettingForAugMS.json  KamiSettingForCantil.json  KamiSettingForConsecStCoss.json  KamiSettingForStCoss.json  StCossRods.json
scripts/mitsuba/: KamiMitRender.py  photo_studio.xml
scripts/mitsuba/tests/hair_with_body/: HairWithBody.py  hair_with_body.xml
src/: Body.cpp  Body.h  CMakeLists.txt  Camera.h  Hair.cpp  Hair.h  Kami.h  KamiSimulator.cpp  KamiSimulator.h  Motion.cpp  Motion.h  PNMesh.cpp  PNMesh.h  main.cpp
src/exporters/: CubeObjGenerator.cpp  CubeObjGenerator.h  MitsubaCameraExporter.cpp  MitsubaCameraExporter.h  MitsubaCurveExporter.cpp  MitsubaCurveExporter.h  ObjExporter.cpp  ObjExporter.h  README.md  SDFParaviewExporter.cpp  SDFParaviewExporter.h  USCHairsalonExporter.cpp  USCHairsalonExporter.h
src/importers/: CMUMocapImporter.h  README.md  USCHairsalonImporter.cpp  USCHairsalonImporter.h
src/solvers/: CantileverTestSolver.cpp  CantileverTestSolver.h  DummySolver.h  README.md  SelleSolver.cpp  SelleSolver.h  SeparatedAUGMSForTest.cpp  SeparatedAUGMSForTest.h  Solver.cpp  Solver.h  SolverFactory.cpp  SolverFactory.h
src/solvers/AugMassSpring/: AugMassSpringSolver.cpp  AugMassSpringSolver.h  Common.cpp  Common.h  EMath.cpp  EMath.h  Geometry.cpp  Geometry.h  HairGen.cpp  HairGen.h  HairLoader.cpp  HairLoader.h  HairSim.cu  HairSim.cuh  LICENSE  SFieldCPU.cpp  SFieldCPU.h  SimpleLoader.cpp  SimpleLoader.h  SimpleTriangle.cpp  SimpleTriangle.cuh  cuda_check.txt  solver.cpp  solver.h
src/solvers/SDFCollisionSolver/: SDFBodyCollisionSolver.cpp  SDFBodyCollisionSolver.h  cudaSDFCollision.cu  cudaSDFCollision.cuh
src/solvers/StableCosseratRods/: StableCosseratRodsSolver.cpp  StableCosseratRodsSolver.h
src/solvers/StableCosseratRods/KittenEngine/KittenGpuLBVH/: lbvh.cu  lbvh.cuh
src/solvers/StableCosseratRods/KittenEngine/includes/modules/: Bound.h  Common.h  Dist.h  KittenAssets.h  KittenPreprocessor.h  Mesh.h  Rotor.h  SymMat.h  Timer.h  UniformBuffer.h  glTempVar.h
src/solvers/StableCosseratRods/KittenEngine/src/: KittenAssets.cpp  KittenPreprocessor.cpp  Mesh.cpp  StopWatch.cpp  Timer.cpp
src/solvers/StableCosseratRods/YarnBall/: YBSimulator.cu  YBSimulator.h  YarnBall.h
src/solvers/StableCosseratRods/YarnBall/io/: fiberMesher.cpp  fileExport.cpp  jsonBuilder.cpp  reader.cpp  resample.h
src/solvers/StableCosseratRods/YarnBall/sim/: collision.cu  cosserat.cu  iteration.cu  statistics.cpp  step.cpp
src/solvers/StableCosseratRods/configs/: cable_work_pattern.json
src/tests/: AugMS_test.cpp  IO_test.cpp  hamg_test.cpp
src/utilities/: FileUtil.cpp  FileUtil.h  Geometry.cpp  Geometry.h  HairModification.cpp  HairModification.h  JsonParser.cpp  JsonParser.h  LinearUtil.cpp  LinearUtil.h  Notification.cpp  Notification.h  UnionVec.cpp  UnionVec.h  cubuffer.h  cudaMath.cu  cudaMath.cuh
